--- a/Frontend/src/components/Homepage.css
+++ b/Frontend/src/components/Homepage.css
@@ -7,8 +7,8 @@
     border: none;
     outline: none;
     cursor: pointer;
-    width: 300px; 
-    height: 300px;
+    width: 270px; 
+    height: 270px;
     border-radius: 50%; 
     background-color: #e9bc8b; 
     color: white; 
@@ -19,18 +19,37 @@
     padding: 10px;
 }
 .language-button {
-    background-color: #3498db;
-    color: white;
+    transform: rotate(-90deg);
+    writing-mode: vertical-rl;
+    align-items: center;
+    color: #3498db;
+    background-color: #1e4182;
+    line-height: 40px;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin-bottom: 10px;
     width: 70px; 
-    height: 70px;
+    text-align: center;
+    height: 300px;
+}
+
+.side-panel {
+    background-color: #333; /* Set the background color for the side panel */
+    width: 100px; /* Set the width of the side panel */
+    height: 100vh; /* Set the height to cover the full viewport height */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .new-user-button {
     align-items: center;
     border: none;
     outline: none;
     cursor: pointer;
-    width: 300px; 
-    height: 300px;
+    width: 270px; 
+    height: 270px;
     border-radius: 50%; 
     background-color: #e9bc8b; 
     color: white; 
@@ -67,4 +86,15 @@ h1{
     height: 25vh;
     padding-left: 20px; 
 
+}
+
+.circle-container {
+    display: flex;
+    justify-content: space-around;
+    padding-left: 20px; 
+    margin-top: 40px; 
+}
+
+.container {
+    display: flex;
 }
