--- a/Frontend/src/components/Signup.css
+++ b/Frontend/src/components/Signup.css
@@ -1,6 +1,6 @@
-.home {
+.signup {
     text-align: center;
     align-items: center;
+    justify-content: center;
     font-family: Arial,Helvetica,sans-serif;
   }
-  
