--- a/Frontend/src/components/Profile.css
+++ b/Frontend/src/components/Profile.css
@@ -6,3 +6,9 @@
 .save {
   color: green;
 }
+
+.profile {
+  text-align: center;
+  align-items: center;
+  font-family: Arial,Helvetica,sans-serif;
+}
