--- a/Frontend/src/components/Signup.css
+++ b/Frontend/src/components/Signup.css
@@ -2,5 +2,6 @@
     text-align: center;
     align-items: center;
     justify-content: center;
+    margin: auto;
     font-family: Arial,Helvetica,sans-serif;
   }
